syntax = "proto3";

option csharp_namespace = "Clue_Less_Server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetPlayerLocation(Empty) returns (IntegerResponse);
  rpc MovePlayerLocation(PlayerMoveRequest) returns (PlayerMoveResponse);
  rpc ValidatePlayerAction(PlayerActionRequest) returns (PlayerActionResponse);
  rpc SendGlobalPlayerNotification(GlobalPlayerNotificationRequest) returns (GlobalPlayerNotificationResponse);
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

enum PlayerCharacterOptions {
	MrsPeacock = 0;
    ProfessorPlum = 1;
    MissScarlet = 2;
    ColMustard = 3;
    MrsWhite = 4;
    MrGreen = 5;
}

message Empty {

}

message IntegerResponse {
    int32 response = 1;
}

message PlayerMoveRequest {
    int32 playerId = 1;
    int32 moveToLocation = 2;
}

message PlayerMoveResponse {
    int32 playerLocation = 1;
}

message PlayerActionRequest {
    bool validPlayerAction = 1;
}

message PlayerActionResponse {
    bool validPlayerAction = 1;
}

message GlobalPlayerNotificationRequest {
    string notification = 1;
}

message GlobalPlayerNotificationResponse {
    string notification = 1;
}


